testdata/invalid/recursive_struct.hzn
package probes

type Node struct {
    next Node
}
